# conference-site

./: .gitignore  README.md  pyproject.toml  settings.toml
.github/workflows/: build-container.yml  build-vm.yml
alembic/: env.py
alembic/versions/: 0579d861c85e_more_user_roles.py  0a68e1e4ae1c_user_add_fields.py  0eb43ad4bc6a_vote_model.py  2c14278aa4c9_vote_model_code_unique.py  4bba09b076c2_file_model.py  84ab75564829_user_form_model.py  c3d858a62990_change_username_to_email.py  deac2e879b0d_default_admin_user.py  ef00b4f232c1_user_roles.py  ef1431fd2367_user_email_is_unique.py
container/: Containerfile  compose.yml  container.sh
src/: __init__.py  db.py  depends.py  main.py  schemas.py  settings.py
src/controllers/: file_controller.py  user_controller.py
src/routers/: __init__.py  index.py
src/routers/auth/: __init__.py  depends.py  models.py  router.py  schemas.py
src/routers/files/: __init__.py  models.py  repo.py  router.py
src/routers/user/: __init__.py  auth.py  models.py  repo.py  router.py  schemas.py
src/routers/vote/: models.py  repo.py  router.py  schemas.py
src/static/appl_templates/: abstract.docx  abstract.tex  one-pager-instructions.pptx  one-pager.pptx
src/static/css/: style.css
src/templates/: 403.jinja  404.jinja  500.jinja  about.jinja  acc.jinja  base.jinja  error.jinja  gallery.jinja  index.jinja  participants.jinja  schedule_base.jinja  vote.jinja
src/templates/auth/: login.jinja  register.jinja
src/templates/form/: reg.jinja
src/templates/gallery/: conf_1.jinja  conf_2.jinja  conf_3.jinja  conf_4.jinja  conf_5.jinja
src/templates/user/: account.jinja  list.jinja  login.jinja  register.jinja
src/templates/vote/: admin.jinja  index.jinja
vm/: configure.sh
